fix possum spacing

--- a/about.css
+++ b/about.css
@@ -53,7 +53,7 @@ body {
   }
 .dashboard-icon {
   top: 8px;
-  left: 17px; 
+  left: 35px; 
   width: 67px;
   height: 84px;
   position: absolute;
